Remove li discs and fix spacing.

--- a/public/stylesheets/_home.scss
+++ b/public/stylesheets/_home.scss
@@ -45,7 +45,9 @@
     li {
       background-image: url(/images/bullet.png);
       background-repeat: no-repeat;
+      list-style-type: none;
       padding-left: 25px;
+      margin-left: 16px;
     }
   }
 
